# FrackParity

./: .gitignore  .travis.yml  CMakeLists.txt  Gemfile  Makefile  README.md  biicode.conf
ci/: after_success.sh  fix_symlinks.sh  install_biicode.sh  install_lcov.sh  script.sh
frackparity/: main.cc  stub.hh
test/unit/: test_stub.cc
